--- a/style.css
+++ b/style.css
@@ -25,8 +25,10 @@ html,body,div {
 
 #playroundContainer{
     display:flex;
-    flex-direction:column;
-    align-self:center;
+    flex-direction:column; 
+     text-align:center;
+
+
 
 }
 
@@ -45,11 +47,6 @@ html,body,div {
     height:500px;
 
 
-  
-   /* width:500px;
-    height:250px;
-
-*/
 
     
     border: 2px solid black;
@@ -69,7 +66,7 @@ html,body,div {
 
 
 
-#rock:hover{
+#rock:hover, #paper:hover, #scissors:hover{
     background-color: yellow;
 
 }
